[gd_scene load_steps=21 format=3 uid="uid://c6xxkytlbq8q2"]

[ext_resource type="Script" path="res://Player.gd" id="1_ksfbt"]
[ext_resource type="PackedScene" uid="uid://cvey477smqw71" path="res://models/characters/templateCharaterModel.glb" id="2_u05fy"]
[ext_resource type="Texture2D" uid="uid://c06olyt7bapq1" path="res://addons/kenney_animated_characters/Skins/skaterMaleA.png" id="3_rtgxh"]
[ext_resource type="PackedScene" uid="uid://cf1dcxwv6bvl3" path="res://models/weapons/Pistol.glb" id="3_w7dyo"]
[ext_resource type="Texture2D" uid="uid://vwob30tkwej4" path="res://addons/kenney_particle_pack/star_06.png" id="4_8wo5q"]
[ext_resource type="PackedScene" uid="uid://f18rdno02ann" path="res://models/weapons/knifes/knife.tscn" id="6_es8m2"]
[ext_resource type="PackedScene" uid="uid://bia8wn20swejc" path="res://models/weapons/guns/ak47/ak47.tscn" id="7_s6bf2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6l0xm"]
albedo_texture = ExtResource("3_rtgxh")

[sub_resource type="BoxShape3D" id="BoxShape3D_efq5s"]

[sub_resource type="Gradient" id="Gradient_q5cnu"]
offsets = PackedFloat32Array(0, 0.141221, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_is51c"]
gradient = SubResource("Gradient_q5cnu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yy8r8"]
angle_min = 45.0
angle_max = 45.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_is51c")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4smqo"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.960784, 0.670588, 1)
albedo_texture = ExtResource("4_8wo5q")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_hkkgb"]
material = SubResource("StandardMaterial3D_4smqo")
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="Animation" id="Animation_jhgv2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TPPCamera/TPPPistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.499933, -0.0734346, -3.35847)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TPPCamera/TPPPistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.898845, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FPPCamera/FPPPistol:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FPPCamera/FPPPistol:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.454152, 0, 0)]
}

[sub_resource type="Animation" id="Animation_knepc"]
resource_name = "idle"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPPCamera/FPPPistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.5, -0.284894, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPPCamera/FPPPistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.122103, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TPPCamera/TPPPistol:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.499933, -0.0734346, -3.35847), Vector3(0.5, -0.108, -3.358)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TPPCamera/TPPPistol:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.445059, 0, 0), Vector3(0.322886, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qcgne"]
resource_name = "move"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPPCamera/FPPPistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2, 0.5),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.455732, -0.215424, -0.5), Vector3(0.5, -0.25, -0.5), Vector3(0.55565, -0.198737, -0.5), Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TPPCamera/TPPPistol:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2, 0.5),
"update": 0,
"values": [Vector3(0.499933, -0.0734346, -3.35847), Vector3(0.456, -0.038, -3.358), Vector3(0.5, -0.073, -3.358), Vector3(0.556, -0.042, -3.358), Vector3(0.5, -0.073, -3.358)]
}

[sub_resource type="Animation" id="Animation_efeb8"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPPCamera/FPPPistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.5, -0.185618, -0.5), Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPPCamera/FPPPistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.454152, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TPPCamera/TPPPistol:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.5, -0.073, -3.358), Vector3(0.499933, -0.0734346, -3.35847)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TPPCamera/TPPPistol:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.898845, 0, 0), Vector3(0.445059, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6wdk"]
_data = {
"RESET": SubResource("Animation_jhgv2"),
"idle": SubResource("Animation_knepc"),
"move": SubResource("Animation_qcgne"),
"shoot": SubResource("Animation_efeb8")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_68m2n"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("FPPCamera:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("TPPCamera:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="Player2" type="CharacterBody3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
collision_layer = 2
script = ExtResource("1_ksfbt")

[node name="NormalDeclan" parent="." instance=ExtResource("2_u05fy")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -2.38419e-07, 0)

[node name="Skeleton3D" parent="NormalDeclan/Root" index="0"]
bones/0/rotation = Quaternion(-0.707107, 9.05624e-08, 0.707107, -4.52812e-08)
bones/0/scale = Vector3(1, 1, 1)
bones/1/rotation = Quaternion(-0.507509, 0.508223, -0.491912, -0.492105)
bones/2/rotation = Quaternion(0.0157269, -0.00207817, 0.994625, -0.102321)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(0.946129, -0.0218709, 0.0755026, -0.314104)
bones/3/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.707107, 1.25133e-07, 0.707107, -1.25133e-07)
bones/9/rotation = Quaternion(-0.707107, 9.05531e-08, 0.707107, -4.52766e-08)
bones/9/scale = Vector3(1, 1, 1)
bones/10/rotation = Quaternion(-0.50769, 0.507905, -0.491725, -0.492433)
bones/10/scale = Vector3(1, 1, 1)
bones/11/scale = Vector3(1.00001, 1, 1)
bones/12/rotation = Quaternion(0.948112, 0.0114449, -0.0440929, -0.314656)
bones/12/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(-0.5, -0.5, 0.5, -0.5)
bones/16/rotation = Quaternion(-0.707107, 1.25133e-07, 0.707107, -1.25133e-07)
bones/18/rotation = Quaternion(9.30153e-05, -6.39397e-09, 0.999999, -0.00144307)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(9.30155e-05, -1.73223e-09, 0.999999, 0.00144307)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(-0.0610426, -1.0919e-08, -1.03379e-08, 0.998135)
bones/21/rotation = Quaternion(0.0118946, 1.00854e-08, 1.10452e-08, 0.999929)
bones/22/rotation = Quaternion(0.0491658, 2.67474e-10, -6.23697e-11, 0.998791)
bones/23/rotation = Quaternion(0.0766158, 5.10965e-10, 5.33664e-11, 0.997061)
bones/23/scale = Vector3(1, 1, 1)
bones/24/rotation = Quaternion(-0.0741353, -4.58966e-10, -2.56488e-11, 0.997248)
bones/26/rotation = Quaternion(0.586882, 0.410653, 0.548295, -0.431632)
bones/26/scale = Vector3(1, 1, 1)
bones/27/rotation = Quaternion(0.08389, 0.710813, 0.0613101, 0.695664)
bones/28/rotation = Quaternion(0.0467615, 0.0125739, 0.00544681, 0.998812)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(-0.0265466, 0.724739, -0.0213085, 0.688182)
bones/30/rotation = Quaternion(0.0567275, -0.0774651, 0.000148622, 0.99538)
bones/31/rotation = Quaternion(0.0813734, 0.0669227, -0.000639115, 0.994434)
bones/31/scale = Vector3(1, 1, 1)
bones/32/rotation = Quaternion(0.0309713, -0.0305239, 0.000892136, 0.999054)
bones/32/scale = Vector3(1, 1, 1)
bones/33/rotation = Quaternion(8.49425e-07, -8.39704e-07, 2.65438e-08, 1)
bones/34/scale = Vector3(1, 1, 1)
bones/35/rotation = Quaternion(0.201199, -0.0134891, 0.00392889, 0.97945)
bones/35/scale = Vector3(1, 1, 1)
bones/36/rotation = Quaternion(6.83591e-07, -3.2559e-06, 1.79932e-06, 1)
bones/37/rotation = Quaternion(0.658379, -0.507611, 0.459994, 0.311887)
bones/38/rotation = Quaternion(-0.000935271, 0.964877, -0.103902, -0.241281)
bones/38/scale = Vector3(1, 1, 1)
bones/39/rotation = Quaternion(0.00073378, -0.00476747, 0.0470719, 0.99888)
bones/40/rotation = Quaternion(0.00820636, 0.000330768, -0.0330372, 0.99942)
bones/41/rotation = Quaternion(-0.0567295, -0.0774615, -0.000148231, 0.99538)
bones/41/scale = Vector3(1, 1, 1)
bones/42/rotation = Quaternion(-0.0813715, 0.0669202, 0.000639282, 0.994434)
bones/42/scale = Vector3(1, 1, 1)
bones/43/rotation = Quaternion(-0.0309754, -0.0305215, -0.000892204, 0.999054)
bones/43/scale = Vector3(1, 1, 1)
bones/45/rotation = Quaternion(-0.358374, 0.729597, -0.429253, -0.393698)
bones/46/rotation = Quaternion(-0.190904, -0.0256769, 0.0636607, 0.979206)
bones/48/rotation = Quaternion(0.997211, 0.0694032, -0.0210528, -0.0175984)
bones/48/scale = Vector3(1, 1, 1)
bones/49/rotation = Quaternion(0.114217, 0.0325762, 0.0426413, 0.992006)
bones/49/scale = Vector3(1, 1, 1)
bones/50/rotation = Quaternion(-0.554441, -0.0467145, -0.060194, 0.828728)
bones/51/rotation = Quaternion(-0.0198169, 0.952287, -0.298255, 0.0616513)
bones/51/scale = Vector3(1, 1, 1)
bones/53/rotation = Quaternion(0.997152, -0.0685442, -0.0237079, -0.0206942)
bones/53/scale = Vector3(1.00002, 1, 1)
bones/55/scale = Vector3(1, 1, 1)
bones/56/rotation = Quaternion(0.0282605, 0.953941, -0.297574, -0.0254451)
bones/56/scale = Vector3(1, 1, 1)

[node name="characterMedium" parent="NormalDeclan/Root/Skeleton3D" index="0"]
material_override = SubResource("StandardMaterial3D_6l0xm")

[node name="HitBoxDeclan" type="CollisionShape3D" parent="."]
transform = Transform3D(1.085, 0, 0, 0, 3.755, 0, 0, 0, 1.05, 0, 1.88, 0)
shape = SubResource("BoxShape3D_efq5s")

[node name="FPPCamera" type="Camera3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 3, 0)

[node name="FPPPistol" parent="FPPCamera" instance=ExtResource("3_w7dyo")]
transform = Transform3D(1, 0, 0, 0, 0.898633, -0.4387, 0, 0.4387, 0.898633, 0.5, -0.25, -0.5)
visible = false

[node name="MuzzleFlash" type="GPUParticles3D" parent="FPPCamera/FPPPistol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0588368, -0.313209)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_yy8r8")
draw_pass_1 = SubResource("PlaneMesh_hkkgb")

[node name="FPPAK47" parent="FPPCamera" instance=ExtResource("7_s6bf2")]
visible = false

[node name="FPPKnife" parent="FPPCamera" instance=ExtResource("6_es8m2")]
transform = Transform3D(0.0975746, -0.00146079, 0.0218418, 0.017235, 0.0666429, -0.0725374, -0.0134964, 0.0745426, 0.0652783, 0.295, -0.265, -0.485)
visible = false

[node name="FPPRayCast3D" type="RayCast3D" parent="FPPCamera"]
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="TPPCamera" type="Camera3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 1.80517, 0.861022, 0, -0.861022, 1.80517, 0, 5.525, 5)
visible = false

[node name="TPPPistol" parent="TPPCamera" instance=ExtResource("3_w7dyo")]
transform = Transform3D(1, 0, 0, 0, 0.622514, -0.782608, 0, 0.782608, 0.622514, 0.499933, -0.0734346, -3.35847)

[node name="MuzzleFlash" type="GPUParticles3D" parent="TPPCamera/TPPPistol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0588368, -0.313209)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_yy8r8")
draw_pass_1 = SubResource("PlaneMesh_hkkgb")

[node name="TPPAK47" parent="TPPCamera" instance=ExtResource("7_s6bf2")]

[node name="TPPKnife" parent="TPPCamera" instance=ExtResource("6_es8m2")]
transform = Transform3D(0.0975746, -0.00146079, 0.0218418, 0.017235, 0.0666429, -0.0725374, -0.0134964, 0.0745426, 0.0652783, 0.425, 0.045, -0.515)

[node name="TPPRayCast3D" type="RayCast3D" parent="TPPCamera"]
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="HitBoxGun" type="CollisionShape3D" parent="."]
transform = Transform3D(0.145, 0, 0, 0, 0.625, 0, 0, 0, 0.625, 1, 2.58, -1.115)
visible = false
shape = SubResource("BoxShape3D_efq5s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p6wdk")
}
autoplay = "idle"
playback_default_blend_time = 0.05

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_68m2n")

[editable path="NormalDeclan"]
